# blue2

./: app.py  estrategia_blue_ocean.xlsx  pyproject.toml  requirements.txt
.streamlit/: secrets.toml
blue_ocean/: analyzer.py  requirements.txt  search.py  visualizer.py
