[project]
name = "blue2"
version = "0.1.0"
description = ""
authors = [
    {name = "sergioaltino",email = "sergio.altino@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.44.1,<2.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "serpapi (>=0.1.5,<0.2.0)",
    "openai (>=1.76.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "blue2", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
